[package]
name = "asn-tools"
version = "0.2.2-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"
description = "Command line tools for looking up IP address for matching ASN information in database from https://iptoasn.com/"
repository = "https://github.com/jpastuszek/asn-tools"
documentation = "https://docs.rs/asn-tools"
readme = "README.md"
keywords = ["asn", "ip", "database", "cli"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
cotton = "0.0.1"
asn-db = "0.1.1"
csv = "1.0.7"
log = "0.4.6"
itertools = "0.7.8"
app_dirs = "1.2.1"
reqwest = "0.9.9"
flate2 = "1.0.6"
structopt = "0.2.14"
tabular = "0.1.2"
json_in_type = "1.1.1"
