[package]
name = "asn-tools"
version = "0.2.4"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"
description = "Command-line tools for lookup of an IP address for matching ASN information in the database from https://iptoasn.com/"
repository = "https://sr.ht/~jpastuszek/asn-tools/"
homepage = "https://jpastuszek.net/asn/"
documentation = "https://docs.rs/asn-tools"
readme = "README.md"
keywords = ["asn", "ip", "database", "cli"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
cotton = "0.0.9"
asn-db = "0.1.4"
csv = "1.1.6"
log = "0.4.17"
itertools = "0.7.11"
app_dirs = "1.2.1"
reqwest = "0.9.24"
flate2 = "1.0.25"
structopt = "0.3.26"
tabular = "0.1.4"
json_in_type = "1.1.1"
